--- a/limbo/affiliate/templates/mobile/samsung/note 20 ultra/note 20 ultra.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 20 ultra/note 20 ultra.html
@@ -1,42 +1,42 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung Galaxy Note 20 price in India may be Rs 43,200 and Samsung Galaxy Note 20 launch date in india may be august 24, 2020. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Samsung Galaxy Note 20, Samsung Galaxy Note 20 launch date in india, Samsung Galaxy Note 20 specification, Samsung Galaxy Note 20 launch date in india , Samsung Galaxy Note 20 price, Samsung Galaxy Note 20 price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Samsung Galaxy Note 20 ultra price in India may be Rs 43,200 and Samsung Galaxy Note 20 ultra launch date in india may be august 24, 2020. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Samsung Galaxy Note 20 ultra, Samsung Galaxy Note 20 ultra, Samsung Galaxy Note 20 ultra specification, Samsung Galaxy Note 20 ultra launch date in india , Samsung Galaxy Note 20 ultra price, Samsung Galaxy Note 20 ultra price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}Samsung Galaxy Note 20 launch date in india, price and specification - hipein{% endblock title%}
+    {% block title%}Samsung Galaxy Note 20 ultra price in india, launch date and specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h5 class="content" style="font-weight: 400;">Samsung has launched its new phone Samsung Galaxy Note 20 in India. The price of Samsung Galaxy Note 20 is 99,999.</h5>
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Samsung Galaxy Note 20 : 8/128GB for Rs 99,999 read Full specification.</h1>
+          <h5 class="content" style="font-weight: 400;">Samsung has launched its new phone Samsung Galaxy Note 20 ultra in India. The price of Samsung Galaxy Note 20 ultra is Rs. 121,990.</h5>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Samsung Galaxy Note 20 ultra : 8/128GB for Rs. 121,990 read Full specification.</h1>
         </div>
         <div>
-          <img class="image" src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-note-20.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-note-20-ultra.jpg'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by:  XEETECHCARE</p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by:  TechTalkTV</p>
         <div class="info">
-          <h2 style="font-weight: 400;">About Samsung Galaxy Note 20</h2>
-          <p class="content">Samsung has launched its new phone Samsung Galaxy Note 20 in India on August 5. 2020. in term of display, Samsung galaxy note 20 have 6.7 (in inch) with FHD + Super AMOLED Plus touchscreen display.  The phone is powered by a 2.73GHz octa-core Exynos 990 SoC processor. The phone runs Android 10 and is powered by a 4300mAh non-removable battery. The Samsung Galaxy Note 20 has supports for the 5G network in some regions. </p>
-          <p class="content">Samsung Galaxy Note 20 smartphone has an FHD+ Super AMOLED Plus capacitive touchscreen, 16M colors. It has a resolution of 1080 x 2400 pixels and 393 PPI pixel density. Talking about its camera, On the front camera, you get a 10-megapixel primary camera and on the rear camera, there is a 64-megapixel Telephoto Camera, 12 megapixels ultra-wide, and  12MP Wide-angle Camera. camera with features like auto flash, face detection, digital zoom, and touch to focus. It has support for fast charging and has a non-removable 4300mAh mAh battery. </p>
-          <h3 style="font-weight: 400;">Samsung galaxy Note 20 launch date and price in india.</h3>
-          <p class="content">The price of Samsung Galaxy Note 20 smartphone in India is likely to be Rs 99,999. Samsung Galaxy Note 20 to be launched in the country on 5 August 2020. This smartphone comes with 2 variant like 8/128 GB and 8/256 GB with color options like mystic green, mystic grey, and mystic bronze. </p>
-          <h3 style="font-weight: 400;">Samsung Galaxy Note 20 Key features:</h3>
+          <h2 style="font-weight: 400;">About Samsung Galaxy Note 20 ultra</h2>
+          <p class="content">Samsung has launched its new phone Samsung Galaxy Note 20 ultra in India on August 5. 2020. in term of display, Samsung Galaxy Note 20 ultra have 6.9 (in inch) with  Dynamic AMOLED 2X Infinity-O touchscreen display.  The phone is powered by a 2.73GHz octa-core Exynos 990 SoC processor. The phone runs Android 10 and is powered by a 4500mAh non-removable battery. The Samsung Galaxy Note 20 ultra has supports for the 5G network in some regions. </p>
+          <p class="content">Samsung Galaxy Note 20 ultra smartphone has an Dynamic AMOLED 2X Infinity-O touchscreen, 16M colors. It has a resolution of 1440x3200 pixels and 496 PPI pixel density. Talking about its camera, On the front camera, you get a 10-megapixel primary camera and on the rear camera, there is a 108-megapixel Wide-angle Camera, 12 megapixels ultra-wide, and  12MP Telephoto Camera. camera with features like auto flash, face detection, digital zoom, and touch to focus. It has support for fast charging and has a non-removable 4500mAh mAh battery. </p>
+          <h3 style="font-weight: 400;">Samsung Galaxy Note 20 ultra launch date and price in india.</h3>
+          <p class="content">The price of Samsung Galaxy Note 20 ultra smartphone in India is likely to be Rs. 121,990. Samsung Galaxy Note 20 ultra to be launched in the country on 5 August 2020. This smartphone comes with 2 variant like 8/512 GB and 8/256 GB with color options like mystic green, mystic grey, and mystic bronze. </p>
+          <h3 style="font-weight: 400;">Samsung Galaxy Note 20 ultra Key features:</h3>
           <ul class="content">
             <li>Diaplay: 6.7 inches</li>
             <li>Processor: 	Exynos 990 SoC processor</li>
-            <li>primary camera: 64 megapixel + 12 megapixels ultra-wide + 12MP Wide-angle</li>
+            <li>primary camera: 108 megapixel + 12 megapixels ultra-wide + 12MP Wide-angle</li>
             <li>selfie camera: 10-megapixel</li>
-            <li>Battery: Non-removable Li-Ion 4300 mAh battery</li>
+            <li>Battery: Non-removable Li-Ion 4500 mAh battery</li>
             <li>Fast charging.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">Samsung Galaxy Note 20 specification</h3>
+    <h3 class="spec_title">Samsung Galaxy Note 20 ultra specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -68,7 +68,7 @@
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>note 20</p>
+          <p>note 20 ultra</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
@@ -108,15 +108,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Screen</strong>
-          <p>FHD+ Super AMOLED Plus display</p>
+          <p>Dynamic AMOLED 2X display</p>
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
-          <p>6.7</p>
+          <p>6.9</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>1080x2400 pixels</p>
+          <p>1440 x 3088 pixels</p>
         </div>
         <div class="specs_info1">
           <strong>Protection</strong>
@@ -152,11 +152,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Dimension(mm)</strong>
-          <p>151.0 x 71.8 x 7.9 mm</p>
+          <p>164.8 x 77.2 x 8.1 mm</p>
         </div>
         <div class="specs_info">
           <strong>Weight(g)</strong>
-          <p>	192g</p>
+          <p>208 g</p>
         </div>
         <div class="specs_info">
           <strong>Build</strong>
@@ -184,7 +184,7 @@
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>8/128GB RAM, 8/256GB RAM</p>
+          <p>8/512GB RAM, 8/256GB RAM</p>
         </div>
       </div>
     </div>
@@ -200,7 +200,7 @@
         </div>
         <div class="specs_info">
           <strong></strong>
-          <p>64MP + 12MP (ultra-wide) + 12MP (Wide-angle)</p>
+          <p>108MP  (Wide-angle) + 12MP (ultra-wide) + 12MP</p>
         </div>
         <div class="specs_info">
           <strong>selfie camera</strong>
@@ -228,7 +228,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong></strong>
-          <p>	Non-removable Li-Po 4300 mAh battery</p>
+          <p>	Non-removable Li-Po 4500 mAh battery</p>
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
