note 20 price change

--- a/limbo/affiliate/templates/mobile/samsung/note 20 ultra/note 20 ultra.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 20 ultra/note 20 ultra.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung Galaxy Note 20 ultra price in India may be Rs 43,200 and Samsung Galaxy Note 20 ultra launch date in india may be august 24, 2020. - hipein "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Samsung Galaxy Note 20 ultra price in India may be Rs 1,04,999 and Samsung Galaxy Note 20 ultra launch date in india may be august 24, 2020. - hipein "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="Samsung Galaxy Note 20 ultra, Samsung Galaxy Note 20 ultra, Samsung Galaxy Note 20 ultra specification, Samsung Galaxy Note 20 ultra launch date in india , Samsung Galaxy Note 20 ultra price, Samsung Galaxy Note 20 ultra price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
@@ -10,8 +10,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h5 class="content" style="font-weight: 400;">Samsung has launched its new phone Samsung Galaxy Note 20 ultra in India. The price of Samsung Galaxy Note 20 ultra is Rs. 121,990.</h5>
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Samsung Galaxy Note 20 ultra : 8/128GB for Rs. 121,990 read Full specification.</h1>
+          <h5 class="content" style="font-weight: 400;">Samsung has launched its new phone Samsung Galaxy Note 20 ultra in India. The price of Samsung Galaxy Note 20 ultra is Rs. 1,04,999.</h5>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Samsung Galaxy Note 20 ultra : 8/256GB for Rs. 1,04,99 read Full specification.</h1>
         </div>
         <div>
           <img class="image" src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-note-20-ultra.jpg'%}" alt="">
@@ -22,7 +22,7 @@
           <p class="content">Samsung has launched its new phone Samsung Galaxy Note 20 ultra in India on August 5. 2020. in term of display, Samsung Galaxy Note 20 ultra have 6.9 (in inch) with  Dynamic AMOLED 2X Infinity-O touchscreen display.  The phone is powered by a 2.73GHz octa-core Exynos 990 SoC processor. The phone runs Android 10 and is powered by a 4500mAh non-removable battery. The Samsung Galaxy Note 20 ultra has supports for the 5G network in some regions. </p>
           <p class="content">Samsung Galaxy Note 20 ultra smartphone has an Dynamic AMOLED 2X Infinity-O touchscreen, 16M colors. It has a resolution of 1440x3200 pixels and 496 PPI pixel density. Talking about its camera, On the front camera, you get a 10-megapixel primary camera and on the rear camera, there is a 108-megapixel Wide-angle Camera, 12 megapixels ultra-wide, and  12MP Telephoto Camera. camera with features like auto flash, face detection, digital zoom, and touch to focus. It has support for fast charging and has a non-removable 4500mAh mAh battery. </p>
           <h3 style="font-weight: 400;">Samsung Galaxy Note 20 ultra launch date and price in india.</h3>
-          <p class="content">The price of Samsung Galaxy Note 20 ultra smartphone in India is likely to be Rs. 121,990. Samsung Galaxy Note 20 ultra to be launched in the country on 5 August 2020. This smartphone comes with 2 variant like 8/512 GB and 8/256 GB with color options like mystic green, mystic grey, and mystic bronze. </p>
+          <p class="content">The price of Samsung Galaxy Note 20 ultra smartphone in India is likely to be Rs. 1,04,999/. Samsung Galaxy Note 20 ultra to be launched in the country on 5 August 2020. This smartphone comes with 2 variant like 8/512 GB and 8/256 GB with color options like mystic green, mystic grey, and mystic bronze. </p>
           <h3 style="font-weight: 400;">Samsung Galaxy Note 20 ultra Key features:</h3>
           <ul class="content">
             <li>Diaplay: 6.7 inches</li>
