--- a/limbo/affiliate/templates/mobile/apple/12/12.html
+++ b/limbo/affiliate/templates/mobile/apple/12/12.html
@@ -24,7 +24,7 @@
           <h2 style="font-weight: 400;"> iPhone 12 design (based on leaks) </h2>
           <p class="content">Talking about its design, the iPhone 12 design is somewhat similar to the iPhone SE and comes with a 5.4-inch Super Retina OLED (BOE) display. Talking about the design of the iPhone 12 Max and iPhone 12 pro, it somewhat reminds me of the iPhone 11. iPhone 12 max comes with 6.1-inch Super Retina OLED (BOE) display and iPhone 12 pro comes with 6.1-inch Super Retina XDR OLED (Samsung) touchscreen display. The design of the iPhone 12 Pro Max is also somewhat reminiscent of the iPhone 11 Pro Max and iPhone 12 pro max comes with 6.7-inch Super Retina XDR OLED (Samsung) touchscreen display.</p>
           <div >
-            <img class="image" src="{% static 'image/article/mobile/iphone 12/iphone2.jpg'%}" alt="">
+            <img class="image" src="{% static 'image/article/mobile/iphone 12/iPhone2.jpg'%}" alt="">
             <p class="content">Image source | google.com-uploaded by: MacRumors</p>
           </div>
           <hr class="my-2">
@@ -116,7 +116,7 @@
           <p class="content">The iPhone 12 price in India is likely to be rs 50,000. iPhone 12 to be launched in the country on October 2020. This smartphone comes with 3 variant like 4/64 GB, 4/128 GB ,and 4/256 GB with color options like Gold, Silver, and Space Grey  with more of a premium-seeming finish to them. </p>
           <hr class="my-2">
           <div >
-            <img class="image" src="{% static 'image/article/mobile/iphone 12/iphone5.jpg'%}" alt="">
+            <img class="image" src="{% static 'image/article/mobile/iphone 12/iPhone5.jpg'%}" alt="">
             <p class="content">Image source | google.com-uploaded by: MacRumors</p>
           </div>
           <hr class="my-2">
