--- a/limbo/affiliate/templates/mobile/apple/12/12.html
+++ b/limbo/affiliate/templates/mobile/apple/12/12.html
@@ -11,31 +11,31 @@
       <div class="main">
         <div class="headline2">
           <h4 class="content" style="font-weight: 400;">Here comes some rumor from Apple that Apple is about to launch its new phone soon.</h4>
-          <h1 class="content_tittle" style="font-weight: 400;"><span>Rumor</span>: iPhone 12 price in india, launch date, spec, and leaks</h1>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>Rumor</span>: iPhone 12 price in India, launch date, spec, and leaks</h1>
         </div>
         <div >
           <img class="image" src="{% static 'image/article/mobile/iphone 12/iphone-12.jpg'%}" alt="">
-          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-uploaded by: ConceptsiPhone</p>
+          <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-uploaded by ConceptsiPhone</p>
         </div>
         <div class="info">
-          <h2 style="font-weight: 400;">About Iphone 12</h2>
+          <h2 style="font-weight: 400;">About iPhone 12</h2>
           <p class="content">Apple is about to launch its new phone iPhone 12 soon. Apple is about to launch its new smartphone in four new models, which can be named iPhone 12, iPhone 12 Max, iPhone 12 Pro, and iPhone 12 pro max. Talking about its launch date, it was to be released by September, but due to some delay, it can be released by October.<p>
           <hr class="my-2">
           <h2 style="font-weight: 400;"> iPhone 12 design (based on leaks) </h2>
           <p class="content">Talking about its design, the iPhone 12 design is somewhat similar to the iPhone SE and comes with a 5.4-inch Super Retina OLED (BOE) display. Talking about the design of the iPhone 12 Max and iPhone 12 pro, it somewhat reminds me of the iPhone 11. iPhone 12 max comes with 6.1-inch Super Retina OLED (BOE) display and iPhone 12 pro comes with 6.1-inch Super Retina XDR OLED (Samsung) touchscreen display. The design of the iPhone 12 Pro Max is also somewhat reminiscent of the iPhone 11 Pro Max and iPhone 12 pro max comes with 6.7-inch Super Retina XDR OLED (Samsung) touchscreen display.</p>
           <div >
             <img class="image" src="{% static 'image/article/mobile/iphone 12/iPhone2.jpg'%}" alt="">
-            <p class="content">Image source | google.com-uploaded by: MacRumors</p>
+            <p class="content">Image source | google.com-uploaded by MacRumors</p>
           </div>
           <hr class="my-2">
-          <h2 style="font-weight: 400;">iPhone 12 price in india.</h2>
+          <h2 style="font-weight: 400;">iPhone 12 price in India.</h2>
           <p class="content">Some price leaks have been revealed here. The price of the iPhone 12 is going to be  50,000-INR to 1,10,000-INR which is quite good. Talking about the lowest model iPhone 12 4/64 GB storage of this phone, the price is going to start from 50000-INR, which would be quite affordable at rs 4,000 less than the iPhone 11. iPhone 12 Max with a 6.1-inch screen will be priced at Rs 56,000.</p>
           <p class="content">The iPhone 12 Max with 6.1 inch screen and 6/128 GB storage will cost rs 78,660,  6/256 GB storage will cost rs 86,159, and 6/516 GB storage will cost rs 1,01,999.</p>
           <p class="content">iPhone 12 pro max with 6.7-inch screen and 6/128 GB storage will cost rs 86,159, 6/256 GB storage will cost rs 93,700, and 6/516 GB storage will cost rs 1,08,655.</p>
           <hr class="my-2">
           <div >
             <img class="image" src="{% static 'image/article/mobile/iphone 12/iphone7.jpg'%}" alt="">
-            <p class="content">Image source | google.com-uploaded by: pixabay</p>
+            <p class="content">Image source | google.com-uploaded by pixabay</p>
           </div>
           <hr class="my-2">
           <h2 style="font-weight: 400;">iPhone 12 specification.</h2>
@@ -112,28 +112,28 @@
             </tr>
           </table>
           <hr class="my-2">
-          <p class="content"><b>iPhone 12</b>: iPhone 12 smartphone has an 5.4-inch OLED panel touchscreen, 16M colors. It has a resolution of 2340x1080 pixels and 440 PPI pixel density. The phone is powered by a Hexa Core Apple A13 Bionic processor. Talking about its camera, On the front camera, you get a 12-megapixel primary camera and on the rear camera, there is a 12-megapixel main Camera and  12MP Telephoto Camera. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 2,227mAh mAh battery.</p>
-          <p class="content">The iPhone 12 price in India is likely to be rs 50,000. iPhone 12 to be launched in the country on October 2020. This smartphone comes with 3 variant like 4/64 GB, 4/128 GB ,and 4/256 GB with color options like Gold, Silver, and Space Grey  with more of a premium-seeming finish to them. </p>
+          <p class="content"><b>iPhone 12</b>: iPhone 12 smartphone has a 5.4-inch OLED panel touchscreen, 16M colors. It has a resolution of 2340x1080 pixels and 440 PPI pixel density. The phone is powered by a Hexa Core Apple A13 Bionic processor. Talking about its camera, On the front camera, you get a 12-megapixel primary camera and on the rear camera, there is a 12-megapixel main Camera and  12MP Telephoto Camera. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 2,227mAh mAh battery.</p>
+          <p class="content">The iPhone 12 price in India is likely to be rs 50,000. iPhone 12 to be launched in the country in October 2020. This smartphone comes with 3 variants like 4/64 GB, 4/128 GB, and 4/256 GB with color options like Gold, Silver, and Space Grey  with more of a premium-seeming finish to them. </p>
           <hr class="my-2">
           <div >
             <img class="image" src="{% static 'image/article/mobile/iphone 12/iPhone5.jpg'%}" alt="">
-            <p class="content">Image source | google.com-uploaded by: MacRumors</p>
+            <p class="content">Image source | google.com-uploaded by MacRumors</p>
           </div>
           <hr class="my-2">
-          <p class="content"><b>iPhone 12 max</b>: iPhone 12 max smartphone has an 6.1-inch OLED panel touchscreen, 16M colors. It has a resolution of 2532x1170 pixels and 440 PPI pixel density. The phone is powered by a Hexa Core Apple A13 Bionic processor. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 2,227mAh mAh battery.</p>
-          <p class="content">The iPhone 12 max price in India is likely to be Rs. 56,000. iPhone 12 max to be launched in the country on October 2020. This smartphone comes with 3 variant like 4/64 GB, 4/128 GB ,and 4/256 GB with color options like Gold, Silver, and Space Grey  with more of a premium-seeming finish to them. </p>
+          <p class="content"><b>iPhone 12 max</b>: iPhone 12 max smartphone has a 6.1-inch OLED panel touchscreen, 16M colors. It has a resolution of 2532x1170 pixels and 440 PPI pixel density. The phone is powered by a Hexa Core Apple A13 Bionic processor. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 2,227mAh mAh battery.</p>
+          <p class="content">The iPhone 12 max price in India is likely to be Rs. 56,000. iPhone 12 max to be launched in the country in October 2020. This smartphone comes with 3 variants like 4/64 GB, 4/128 GB, and 4/256 GB with color options like Gold, Silver, and Space Grey  with more of a premium-seeming finish to them. </p>
         </div>
         <hr class="my-2">
-        <p class="content"><b>iPhone 12 pro</b>: iPhone 12 pro smartphone has an 6.1-inch Super Retina XDR OLED (Samsung) touchscreen, 16M colors. It has a resolution of 2532x1170 pixels and 440 PPI pixel density. The phone is powered by a Hexa Core Apple A13 Bionic processor. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 2,227mAh mAh battery.</p>
-        <p class="content">The price of iPhone 12 pro smartphone in India is likely to be Rs. 78,660. iPhone 12 pro to be launched in the country on October 2020. This smartphone comes with 3 variant like 6/128 GB, 6/256 GB ,and 6/512 GB with color options like Gold, Silver, and Space Grey  with more of a premium-seeming finish to them. </p>
+        <p class="content"><b>iPhone 12 pro</b>: iPhone 12 pro smartphone has a 6.1-inch Super Retina XDR OLED (Samsung) touchscreen, 16M colors. It has a resolution of 2532x1170 pixels and 440 PPI pixel density. The phone is powered by a Hexa Core Apple A13 Bionic processor. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 2,227mAh mAh battery.</p>
+        <p class="content">The price of the iPhone 12 pro smartphone in India is likely to be Rs. 78,660. iPhone 12 pro to be launched in the country in October 2020. This smartphone comes with 3 variants like 6/128 GB, 6/256 GB, and 6/512 GB with color options like Gold, Silver, and Space Grey  with more of a premium-seeming finish to them. </p>
         <hr class="my-2">
         <div >
           <img class="image" src="{% static 'image/article/mobile/iphone 12/iphone8.jpg'%}" alt="">
-          <p class="content">Image source | google.com-uploaded by: Pinterest</p>
+          <p class="content">Image source | google.com-uploaded by Pinterest</p>
         </div>
         <hr class="my-2">
-        <p class="content"><b>iPhone 12 pro max</b>: iPhone 12 pro max smartphone has an 6.7-inch Super Retina XDR OLED (Samsung) touchscreen, 16M colors. It has a resolution of 2778x1824 pixels and 440 PPI pixel density. The phone is powered by a Hexa Core Apple A13 Bionic processor. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 3,687mAh battery.</p>
-        <p class="content">The price of iPhone 12 pro max smartphone in India is likely to be Rs. 86,159. iPhone 12 pro max to be launched in the country on October 2020. This smartphone comes with 3 variant like 6/128 GB, 6/256 GB ,and 6/512 GB with color options like Gold, Silver, and Space Grey  with more of a premium-seeming finish to them. </p>
+        <p class="content"><b>iPhone 12 pro max</b>: iPhone 12 pro max smartphone has a 6.7-inch Super Retina XDR OLED (Samsung) touchscreen, 16M colors. It has a resolution of 2778x1824 pixels and 440 PPI pixel density. The phone is powered by a Hexa Core Apple A13 Bionic processor. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 3,687mAh battery.</p>
+        <p class="content">The price of the iPhone 12 pro max smartphone in India is likely to be Rs. 86,159. iPhone 12 pro max to be launched in the country in October 2020. This smartphone comes with 3 variants like 6/128 GB, 6/256 GB, and 6/512 GB with color options like Gold, Silver, and Space Grey  with more of a premium-seeming finish to them. </p>
         <p></p>
         <h3 style="font-weight: 400;">Thankyou :)</h3><br>
         <hr class="my-2">
