--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -563,6 +563,23 @@
     <section>
       <div class="blogs">
         <div class="blog-posts ">
+         <!-- 3 -->
+         <article class="blog-post shadow">
+           <div class="post">
+             <div class="">
+               <img class="img-article"  src="{% static 'image/article/apps/game/game-mobile.jpg'%}" alt="">
+             </div>
+             <div class="post-info">
+               <h3  style="font-weight: 400;">Top 10 best android games for free in 2020</h3>
+               <p style="color:gray;">Everybody likes to play mobile games in the 20th century,  whether they are children or  youngsters we all love to play mobile games in our free time. As technology is increasing, the experience of playing mobile games is also increasing.</p>
+               <p></p><br>
+               <div class="badge">
+                 <a class="read-more" href="{% url 'filmorago' %}">Read more</a>
+                 <a class="Categories" style="color: gray" href="#"><b>Categories</b> : game</a>
+               </div>
+             </div>
+           </div>
+         </article>
          <!-- 2 -->
          <article class="blog-post shadow">
            <div class="post">
