--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -574,7 +574,7 @@
                <p style="color:gray;">Everybody likes to play mobile games in the 20th century,  whether they are children or  youngsters we all love to play mobile games in our free time. As technology is increasing, the experience of playing mobile games is also increasing.</p>
                <p></p><br>
                <div class="badge">
-                 <a class="read-more" href="{% url 'filmorago' %}">Read more</a>
+                 <a class="read-more" href="{% url 'androidgame' %}">Read more</a>
                  <a class="Categories" style="color: gray" href="#"><b>Categories</b> : game</a>
                </div>
              </div>
