--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -74,6 +74,7 @@
       }
       .blog-img{
         width: 100%;
+        height: 510px;
       }
       .bloger-name{
         display: flex;
@@ -144,13 +145,17 @@
         padding: 5px 0 0 6px;
         color: gray;
       }
+      .semrush{
+        width: 100%;
+        margin: 10px 0;
+      }
       .blogs{
         display: flex;
         width: 80%;
         margin: 20px 200px 20px 150px;
       }
       .blog-post{
-        margin-bottom: 20px;
+        margin-bottom: 2px;
         border-bottom: 1px solid #eee;
         border-top: 1px solid #eee;
       }
@@ -420,6 +425,9 @@
           margin: 0;
           margin-bottom: 7px;
         }
+        .blog-img{
+          height: 100%;
+        }
         .blog{
           flex-direction: column-reverse;
           width: 100%;
@@ -563,6 +571,7 @@
     <section>
       <div class="blogs">
         <div class="blog-posts ">
+         <a href="https://www.semrush.com/siteaudit/?ref=3048987354&utm_campaign=banner_orange_728x90&utm_source=berush&utm_medium=promo&utm_term=143" target="_blank"><img class="semrush" height="90" src="https://pm.berush.com/source/banners/image/16/en/728_90.gif" alt="SEMrush" /></a>
          <!-- 3 -->
          <article class="blog-post shadow">
            <div class="post">
