--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -147,7 +147,7 @@
       }
       .semrush{
         width: 100%;
-        margin: 10px 0;
+        margin: 0 0 10px 0;
       }
       .blogs{
         display: flex;
@@ -155,7 +155,7 @@
         margin: 20px 200px 20px 150px;
       }
       .blog-post{
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         border-bottom: 1px solid #eee;
         border-top: 1px solid #eee;
       }
