--- a/limbo/affiliate/templates/blog/apps/game/top-10-android-game.html
+++ b/limbo/affiliate/templates/blog/apps/game/top-10-android-game.html
@@ -90,6 +90,7 @@
         <p></p>
       </div>
       <hr class="my-2">
+      <a href="http://www.semrush.com/sem?ref=3048987354&utm_campaign=banner_black_468x60&utm_source=berush&utm_medium=promo&utm_term=308" target="_blank"><img class="samrush" width="468" height="60" src="https://pm.berush.com/source/banners/image/23/en/468x60_en.png" alt="SEMrush" /></a>
     </div>
     <!-- 3 -->
     <div class="info">
