--- a/limbo/affiliate/templates/blog/apps/game/top-10-android-game.html
+++ b/limbo/affiliate/templates/blog/apps/game/top-10-android-game.html
@@ -278,7 +278,7 @@
       </div>
       <hr class="my-2">
     </div>
-    <p>I hope this "<b>best android games for free in 2020</b>" article will help you a lot in finding the best game for you. Hey, i am prince singh rajput you can follow me on <a href="https://rb.gy/5rrdsp">instagram</a>.</p>
+    <p>I hope this "<b>best android games for free in 2020</b>" article will help you a lot in finding the best game for you. Hey, i am prince singh rajput you can follow me on <a href="https://rb.gy/5rrdsp">instagram- prince_singh_rajput8</a>.</p>
     <h3 style="font-weight: 400;">Thankyou :)</h3><br>
     <!-- 11 -->
   </div>
