--- a/limbo/affiliate/templates/blog/technology/add-me-to-search.html
+++ b/limbo/affiliate/templates/blog/technology/add-me-to-search.html
@@ -71,6 +71,7 @@
           </div>
           <p>After clicking Get Started, your page will open as the image above. On this page, you can add your name, location, about, email, phone number as well as you can add your social media profile.</p>
           <hr class="my-2">
+          <a href="http://www.semrush.com/sem?ref=3048987354&utm_campaign=banner_black_468x60&utm_source=berush&utm_medium=promo&utm_term=308" target="_blank"><img class="samrush" width="468" height="60" src="https://pm.berush.com/source/banners/image/23/en/468x60_en.png" alt="SEMrush" /></a>
         </div>
         <!-- 3 -->
         <div class="info">
