--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -566,12 +566,29 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>"add me to search" with new feature make yourself visible on google search.
 
     <section>
       <div class="blogs">
         <div class="blog-posts ">
          <a href="https://www.semrush.com/siteaudit/?ref=3048987354&utm_campaign=banner_orange_728x90&utm_source=berush&utm_medium=promo&utm_term=143" target="_blank"><img class="semrush" height="90" src="https://pm.berush.com/source/banners/image/16/en/728_90.gif" alt="SEMrush" /></a>
+         <!-- 4 -->
+         <article class="blog-post shadow">
+           <div class="post">
+             <div class="">
+               <img class="img-article"  src="{% static 'image/article/technology/add me to search/add-me-to-search.jpg'%}" alt="">
+             </div>
+             <div class="post-info">
+               <h3  style="font-weight: 400;">"add me to search" with new feature make yourself visible on google search.</h3>
+               <p style="color:gray;">There are many people here who want to see their name in Google search. To solve this problem, a new feature was introduced from Google called "add me to search". Users can add their name, hobbies, work, location to it as well as users can also add their social media account to it. </p>
+               <p></p><br>
+               <div class="badge">
+                 <a class="read-more" href="{% url 'addmetosearch' %}">Read more</a>
+                 <a class="Categories" style="color: gray" href="#"><b>Categories</b> : Technology</a>
+               </div>
+             </div>
+           </div>
+         </article>
          <!-- 3 -->
          <article class="blog-post shadow">
            <div class="post">
