--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -566,7 +566,6 @@
           </div>
         </div>
       </div>
-    </section>"add me to search" with new feature make yourself visible on google search.
 
     <section>
       <div class="blogs">
@@ -580,7 +579,7 @@
              </div>
              <div class="post-info">
                <h3  style="font-weight: 400;">"add me to search" with new feature make yourself visible on google search.</h3>
-               <p style="color:gray;">There are many people here who want to see their name in Google search. To solve this problem, a new feature was introduced from Google called "add me to search". Users can add their name, hobbies, work, location to it as well as users can also add their social media account to it. </p>
+               <p style="color:gray;">There are many people here who want to see their name in Google search. To solve this problem, a new feature was introduced from Google called "add me to search". </p>
                <p></p><br>
                <div class="badge">
                  <a class="read-more" href="{% url 'addmetosearch' %}">Read more</a>
