--- a/limbo/affiliate/templates/blog/technology/add-me-to-search.html
+++ b/limbo/affiliate/templates/blog/technology/add-me-to-search.html
@@ -35,7 +35,7 @@
     </style>
     {% endblock style %}
     {% load static %}
-    {% block title%}"add me to search" with Google new feature make yourself visible on google search{% endblock title%}
+    {% block title%}How to create your virtual visiting card using "add me to search".{% endblock title%}
     {% block actart%} class="active"{% endblock actart%}
     {% block content%}
 
