--- a/limbo/affiliate/templates/blog/technology/add-me-to-search.html
+++ b/limbo/affiliate/templates/blog/technology/add-me-to-search.html
@@ -93,7 +93,7 @@
         <!-- 5 -->
         <div class="info">
           <p>Above mentioned steps are just a short guide to use this feature. There are lots of other features that will amaze you. I hope my article will help you with what you are looking for. This is Rohit Raj and Thanks for the support.</p>
-          <h3 style="font-weight: 400;" >Thankyou :)</h3>
+          <div class="fb-comments comments" data-href="https://www.hipein.com/technology/add-me-to-search" data-numposts="5" data-width="100%"></div>
           <p></p>
         </div>
         <!--  -->
