comment box add

--- a/limbo/affiliate/static/pageCss/Mobile/mobileSpecCss.css
+++ b/limbo/affiliate/static/pageCss/Mobile/mobileSpecCss.css
@@ -1,4 +1,3 @@
-/* responsive nav-bar */
 body{
   margin: 0;
   padding: 0;
@@ -56,7 +55,6 @@ nav ul li a:hover{
   transition: 0.5s;
   text-decoration: none;
 }
-/* alert massage */
 .alert{
   width: 100%;
   padding: .75rem 1.25rem;
@@ -64,17 +62,14 @@ nav ul li a:hover{
   border: 1px solid transparent;
   background: #0984e3;
   color: white;
-
 }
-/* review and specification */
 .wrapper{
   width: 75%;
   margin: 0 200px 20px 160px;
   background: #eee;
 }
-/* side-bar */
 .sidebar{
-  width: 36%; /* Set the width- of the sidebar */
+  width: 36%;
   position: absolute ;
   z-index: 1;
   left: 64%;
@@ -110,11 +105,9 @@ nav ul li a:hover{
   padding-left: 10px;
   margin-top: 10px;
 }
-/* main content */
 .main {
   width: 70%;
-  margin-left:0 ; /* Same as the width of the sidebar */
-  /* margin-top: 160px; */
+  margin-left:0 ;
   padding: 0px 10px;
   background: #fff;
   box-shadow: -1px 9px 20px -12px rgba(0, 0, 0, 0.75);
@@ -134,7 +127,6 @@ nav ul li a:hover{
 .info{
   padding-bottom: 10px;
 }
-/* specification */
 .spec_title{
   width: 70%;
   color: white;
@@ -233,8 +225,6 @@ nav ul li a:hover{
   .specs_table:hover{
     border-left: 3px solid #e74c3c;
   }
-}
-/* footer css */
 footer{
   display: flex;
   height: 280px;
@@ -283,8 +273,7 @@ footer{
 .copyright_text{
   margin-top: 10px;
 }
-
-/* responsive css */
+}
 @media (max-width: 1200px) {
     .alert{
       width: 100%;
@@ -295,7 +284,6 @@ footer{
     .main{
       width: 100%;
     }
-    /* footer */
     .footer_info{
       margin-left: 0;
       flex: 1.5;
@@ -318,7 +306,6 @@ footer{
       width: 40px;
       height: 40px;
       margin: 10px;
-      /* background: #ccc; */
       float: right;
       cursor: pointer;
       text-align: center;
@@ -355,7 +342,6 @@ footer{
     .image{
       width: 100%;
     }
-    /* specification */
     .spec_title{
       width: 100%;
     }
@@ -395,7 +381,6 @@ footer{
     .specs_info1 strong{
       width: 50px;
     }
-    /* footer */
     footer{
       margin-top: 10px;
       height: 500px;
