comment box add

--- a/limbo/affiliate/templates/blog/technology/add-me-to-search.html
+++ b/limbo/affiliate/templates/blog/technology/add-me-to-search.html
@@ -15,6 +15,9 @@
         margin-left: 140px;
         border: 1px solid;
       }
+      .fb-comments{
+        width: 100%;
+      }
       @media (max-width: 1200px){
         .image1{
         margin-left: 350px;
@@ -46,7 +49,7 @@
           <h1 class="content_tittle" style="font-weight: 400;" >"add me to search" with new feature make yourself visible on google search.</h1>
           <p>By <span style="color:blue;">Rohit Raj</span>- Updated on <b style="color: gray;">11 August 2020</b></p>
           <hr class="my-2">
-          <p class="content">There are many people here who want to see their name in Google search. To solve this problem, a new feature was introduced from Google called "add me to search". Users can add their name, hobbies, work, location to it as well as users can also add their social media account to it. With this, you can create your virtual visiting card. In the next few step, I will teach you how to create your virtual visiting card.</p>
+          <p>There are many people here who want to see their name in Google search. To solve this problem, a new feature was introduced from Google called "add me to search". Users can add their name, hobbies, work, location to it as well as users can also add their social media account to it. With this, you can create your virtual visiting card. In the next few step, I will teach you how to create your virtual visiting card.</p>
           <img class="image" src="{% static 'image/article/technology/add me to search/add-me-to-search.jpg'%}" alt="">
           <p></p>
           <hr class="my-2">
@@ -60,6 +63,7 @@
           <p><b>Step 1.</b>To create your virtual visiting card on Google you need to type "add me to search" in the Google search bar or use Google Assistant. In my case, I am using google assistance. </p>
           <div>
             <img class="image2" src="{% static 'image/article/technology/add me to search/1.jpg'%}" alt="">
+            <p></p>
           </div>
           <p>After searching in Google, it will open something similar to the image given above. If you do not have any idea to create your virtual visiting card, you can try it by clicking on a view example and you can make a good virtual visiting card.</p>
           <hr class="my-2">
@@ -69,6 +73,7 @@
           <p><b>Step 2.</b>Click on Get Started to create a virtual visiting card.</p>
           <div>
             <img class="image2" src="{% static 'image/article/technology/add me to search/2.jpg'%}" alt="">
+            <p></p>
           </div>
           <p>After clicking Get Started, your page will open as the image above. On this page, you can add your name, location, about, email, phone number as well as you can add your social media profile.</p>
           <hr class="my-2">
@@ -79,6 +84,7 @@
           <p><b>Step 3.</b>After filling all the details, click on the preview button below.</p>
           <div>
             <img class="image1" src="{% static 'image/article/technology/add me to search/3.jpg'%}" alt="">
+            <p></p>
           </div>
           <p>After clicking preview, your page will open as the image above. On this page, you can see what your virtual visiting card will look like. If you want to change some details then you can go back and change.</p>
           <hr class="my-2">
@@ -88,11 +94,13 @@
           <p><b>Step 4.</b>You can save your details by clicking on the save button and to see your virtual visiting card on google, click on "view search card"</p>
           <div>
             <img class="image2" src="{% static 'image/article/technology/add me to search/4.jpg'%}" alt="">
+            <p></p>
           </div>
         </div>
         <!-- 5 -->
         <div class="info">
           <p>Above mentioned steps are just a short guide to use this feature. There are lots of other features that will amaze you. I hope my article will help you with what you are looking for. This is Rohit Raj and Thanks for the support.</p>
+          <hr class="my-2">
           <div class="fb-comments comments" data-href="https://www.hipein.com/technology/add-me-to-search" data-numposts="5" data-width=""></div>
           <p></p>
         </div>
