--- a/limbo/affiliate/templates/blog/technology/add-me-to-search.html
+++ b/limbo/affiliate/templates/blog/technology/add-me-to-search.html
@@ -15,7 +15,7 @@
         margin-left: 140px;
         border: 1px solid;
       }
-      .fb-comments{
+      #comments{
         width: 100%;
       }
       @media (max-width: 1200px){
@@ -101,7 +101,7 @@
         <div class="info">
           <p>Above mentioned steps are just a short guide to use this feature. There are lots of other features that will amaze you. I hope my article will help you with what you are looking for. This is Rohit Raj and Thanks for the support.</p>
           <hr class="my-2">
-          <div class="fb-comments comments" data-href="https://www.hipein.com/technology/add-me-to-search" data-numposts="5" data-width=""></div>
+          <div class="fb-comments" id="comments" data-href="https://www.hipein.com/technology/add-me-to-search" data-numposts="5" data-width=""></div>
           <p></p>
         </div>
         <!--  -->
