artilce img addjust

--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -99,6 +99,7 @@
       }
       .side-blog-img{
         width: 345px;
+        height: 205px;
       }
       .side-bloger-name a:hover{
         text-decoration: none;
