artilce img addjust

--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -464,8 +464,12 @@
           position: relative;
           margin-top: 5px;
         }
+        .side-blog{
+          padding: 0;
+        }
         .side-blog-img{
           width: 100%;
+          height: 100%;
         }
         .side-bloger-name h6{
           color: gray;
