how to add search bar in django

--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -510,7 +510,7 @@
           width: 100%;
         }
         .Categories{
-          margin-left: 140px;
+          margin-left: 180px;
         }
         /* footer */
         footer{
@@ -576,6 +576,23 @@
       <div class="blogs">
         <div class="blog-posts ">
          <a href="https://www.semrush.com/siteaudit/?ref=3048987354&utm_campaign=banner_orange_728x90&utm_source=berush&utm_medium=promo&utm_term=143" target="_blank"><img class="semrush" height="90" src="https://pm.berush.com/source/banners/image/16/en/728_90.gif" alt="SEMrush" /></a>
+         <!-- 5 -->
+         <article class="blog-post shadow">
+           <div class="post">
+             <div class="">
+               <img class="img-article"  src="{% static 'image/article/programing/search bar/info django.jpg'%}" alt="">
+             </div>
+             <div class="post-info">
+               <h3  style="font-weight: 400;">How to add a search bar in Django site</h3>
+               <p style="color:gray;">In this article, we are going to learn how to add a search bar on your website using the Django web framework. if don't know about the Django web framework <a href="https://docs.djangoproject.com/en/3.0/">click here</a>. </p>
+               <p></p><br>
+               <div class="badge">
+                 <a class="read-more" href="{% url 'searchbar' %}">Read more</a>
+                 <a class="Categories" style="color: gray" href="#"><b>Categories</b> : Programing</a>
+               </div>
+             </div>
+           </div>
+         </article>
          <!-- 4 -->
          <article class="blog-post shadow">
            <div class="post">
