how to add search bar in django

--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -487,6 +487,9 @@
         .side-bloger-name1{
           top: 51.5%;
         }
+        .semrush{
+          margin:10px 0;
+        }
         .blogs{
           flex-direction: column-reverse;
           width: 100%;
