how to add search bar in django

--- a/limbo/affiliate/templates/blog/programing/search bar.html
+++ b/limbo/affiliate/templates/blog/programing/search bar.html
@@ -278,6 +278,7 @@
           <img class="image" src="{% static 'image/article/programing/search bar/7.png'%}" alt="">
           <p>I hope you got all the answers from this article "<b>how to add search bar in Django</b>". if have any problem regarding the code please comment below I will reply to you as soon as possible. if don't know how to create a virtual environment <a href="#">click here</a>.</p>
           <hr class="my-2">
+          <div class="fb-comments" data-href="https://www.hipein.com/programing/search-bar-in-django" data-numposts="5" data-width=""></div>
         </div>
       </div>
     </div>
