--- a/limbo/affiliate/templates/blog/programing/search bar.html
+++ b/limbo/affiliate/templates/blog/programing/search bar.html
@@ -31,6 +31,9 @@
         p{
           font-size: 19px;
         }
+        footer p{
+          font-size: 16px;
+        }
       }
     </style>
     {% endblock style %}
