--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% block desc%} {% endblock desc%}
     {% block key%} {% endblock key%}
+    {% block script %} {% endblock script %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="DMyYgz5Q"></script>
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5f350ba3de52a0001208d87c&product=inline-share-buttons" async="async"></script>
